Compact object headers, add a test item (no en-US for you!)